# firecrawl

rustyspider/: Cargo.toml  RUST_PORT_ROADMAP.md  TECHNICAL_JUSTIFICATION.md
rustyspider/apps/firecrawl-api/: Cargo.toml
rustyspider/apps/firecrawl-api/src/: main.rs
rustyspider/crates/firecrawl-core/: Cargo.toml
rustyspider/crates/firecrawl-core/migrations/: 20240520000000_init.sql
rustyspider/crates/firecrawl-core/src/: crawler.rs  engpicker.rs  html.rs  lib.rs  pdf.rs  webhook.rs
rustyspider/crates/firecrawl-core/src/crawl/: mod.rs
rustyspider/crates/firecrawl-core/src/document/: mod.rs
rustyspider/crates/firecrawl-core/src/document/model/: mod.rs
rustyspider/crates/firecrawl-core/src/document/providers/: doc.rs  docx.rs  factory.rs  html.rs  mod.rs  odt.rs  rtf.rs  xlsx.rs
rustyspider/crates/firecrawl-core/src/document/renderers/: html.rs  markdown.rs
rustyspider/crates/firecrawl-core/src/queue/: mod.rs  redis.rs
rustyspider/crates/firecrawl-core/src/scraper/: browser.rs  http.rs  mod.rs  service.rs
rustyspider/crates/firecrawl-core/src/storage/: mod.rs
rustyspider/crates/firecrawl-core/src/worker/: mod.rs
rustyspider/crates/firecrawl-core/tests/: markdown_extra_test.rs  markdown_test.rs
