[package]
name = "firecrawl-api"
version = "0.1.0"
edition = "2021"

[dependencies]
firecrawl-core = { path = "../../crates/firecrawl-core" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
